[package]
name = "egue"
version = "0.1.0"
authors = ["Matt Bowers <mattb6503@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg = "0.6.0"
symbolic_expressions = "5.0.3"
rustyline = "7.1.0"
colored = "2.0.0"

