[package]
name = "egue"
version = "0.1.0"
authors = ["Matt Bowers <mattb6503@gmail.com>"]
edition = "2018"
description = "a collection of synthesis tools"


[dependencies]
egg = "0.6.0"
symbolic_expressions = "5.0.3"
rustyline = "7.1.0"
colored = "2.0.0"
clap = "2.33.3"
nom = "6.0.1"

[dev-dependencies]
criterion = "0.3.3"

